# telegram-finance-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
.github/workflows/: fly-deploy.yml
src/finance_bot/: db.py  handlers.py  main.py  parser.py  prompts.py  service.py  table_image.py
src/src/finance_bot/: __init__.py  config.py  db.py  parser.py  service.py
src/src/telegram_finance_bot.egg-info/: entry_points.txt  top_level.txt
telegram-finance-bot/: .env  Dockerfile  docker-compose.yml  pyproject.toml  railway.json
telegram-finance-bot/data/: finance_bot.sqlite3-shm  finance_bot.sqlite3-wal
telegram-finance-bot/src/finance_bot/: config.py  domain.py  errors.py  formatters.py  handlers.py  keyboards.py  main.py  middleware.py  service.py
telegram-finance-bot/src/src/finance_bot/: handlers.py  main.py  reports.py  sheets.py  states.py
telegram-finance-bot/src/src/telegram_finance_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
telegram-finance-bot/src/telegram_finance_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_table_handlers.py  test_table_image.py
