[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-finance-bot"
version = "0.2.0"
description = "Telegram bot for frictionless personal finance tracking with SQLite storage"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram==3.29.1",
    "zai-sdk==0.2.3",
    "pydantic>=2.11,<3",
    "pydantic-settings>=2.10,<3",
    "python-dotenv>=1.1,<2",
    "tzdata",
    "matplotlib>=3.9,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4,<9",
    "pytest-asyncio>=1.1,<2",
    "ruff>=0.12,<1",
]

[project.scripts]
finance-bot = "finance_bot.main:cli"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]
ignore = ["RUF001"] # Ukrainian UI text intentionally uses Cyrillic confusables.